feat: add Telegram bot with LLM generation and Docker deployment
- Add telegram_bot/ module with handlers, config, and formatters
- Integrate with existing RAG pipeline (Retriever + Generator)
- Add Docker support (Dockerfile + docker-compose.yml)
- Update requirements.txt with aiogram dependency
- Add .env.example with bot configuration
- Fix HTML escaping in sources block for Telegram compatibility

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 dataset/index
 dataset/processed
+dataset/validation
 .venv/
 .venv311/
 .venv*/
@@ -10,4 +11,4 @@ __pycache__/
 notes.jsonl
 chunks.jsonl
 .env
-
+README_CHECKPOINT2.md
